feat: non discrete constants tests